@@ -134,19 +134,22 @@ typedef struct _GStaticMutex GStaticMutex;
 struct _GStaticMutex
 {
   struct _GMutex *runtime_mutex;
-  union {
-    /* The size of the pad array should be sizeof (pthread_mutex_t) */
-    /* This value corresponds to the 1999-05-30 version of pthreads-win32 */
-    char   pad[4];
-    double dummy_double;
-    void  *dummy_pointer;
-    long   dummy_long;
-  } aligned_pad_u;
+  struct {
+    union {
+      /* The size of the pad array should be sizeof (pthread_mutex_t) */
+      /* This value corresponds to the 1999-05-30 version of pthreads-win32 */
+      char   pad[4];
+      double dummy_double;
+      void  *dummy_pointer;
+      long   dummy_long;
+    } mutex;
+    void *debug_info;
+  } static_mutex;
 };
 /* This should be NULL followed by the bytes in PTHREAD_MUTEX_INITIALIZER */
 #define	G_STATIC_MUTEX_INIT	{ NULL, { { 255, 255, 255, 255 } } }
 #define	g_static_mutex_get_mutex(mutex) \
-  (g_thread_use_default_impl ? ((GMutex*) &((mutex)->aligned_pad_u)) : \
+  (g_thread_use_default_impl ? ((GMutex*) &((mutex)->static_mutex)) : \
    g_static_mutex_get_mutex_impl (&((mutex)->runtime_mutex)))
 /* This represents a system thread as used by the implementation. An
  * alien implementaion, as loaded by g_thread_init can only count on
